# cmake-sfml-project

./: CMakeLists.txt  CMakePresets.json
cmake/: headerlist.cmake  headers.cmake  sourcelist.cmake  sources.cmake
include/: physicsfstream.hpp
src/: main.cpp  physicsfstream.cpp
